# xllm

./: .gitmodules  CMakeLists.txt  README.md  README_zh.md  THIRDPARTYNOTICES.md  env.py  mkdocs_en.yml  mkdocs_zh.yml  pyproject.toml  setup.py  vcpkg.json
tests/api_service/: CMakeLists.txt  anthropic_json_test.cpp  anthropic_protocol_test.cpp  anthropic_service_test.cpp  anthropic_stream_utils_test.cpp  chat_json_parser_test.cpp  openai_service_test.cpp  sample_service_impl_test.cpp  usage_json_test.cpp
tests/core/framework/: CMakeLists.txt  hf_model_loader_test.cpp
tests/core/framework/batch/: CMakeLists.txt  batch_packed_input_test.cpp  batch_test.cpp
tests/core/framework/block/: CMakeLists.txt  block_manager_pool_test_peer.h  block_manager_test.cpp  composite_block_manager_test.cpp  concurrent_block_manager_test.cpp  single_block_manager_test.cpp
tests/core/framework/chat_template/: CMakeLists.txt  chat_template_test.cpp  deepseek_v32_cpp_template_test.cpp  deepseek_v4_cpp_template_test.cpp  jinja_chat_template_test.cpp
tests/core/framework/config/: CMakeLists.txt  config_json_test.cpp  config_test.json  disagg_pd_config_test.cpp
tests/core/framework/encoder_cache/: CMakeLists.txt  encoder_cache_test.cpp
tests/core/framework/eplb/: CMakeLists.txt  eplb_policy_test.cpp
tests/core/framework/kv_cache/: CMakeLists.txt  embedding_cache_test.cpp  kv_cache_estimation_test.cpp  kv_cache_test.cpp
tests/core/framework/kv_cache_transfer/: CMakeLists.txt  (+3 more)
tests/core/platform/: CMakeLists.txt  shared_vmm_allocator_test.cpp
tests/core/runtime/: CMakeLists.txt  acl_graph_executor_test.cpp  acl_graph_task_update_test.cpp  cp_input_partition_test.cpp  cuda_graph_executor_test.cpp  dcu_graph_executor_test.cpp  mlu_graph_executor_test.cpp  spec_input_builder_test.cpp
tests/core/scheduler/: CMakeLists.txt  chunked_prefill_scheduler_test.cpp  continuous_scheduler_test.cpp  disagg_pd_chunked_prefill_scheduler_test.cpp  disagg_pd_scheduler_test.cpp  fixed_steps_scheduler_test.cpp
tests/core/util/: CMakeLists.txt  blocking_counter_test.cpp  device_name_utils_test.cpp  http_downloader_test.cpp  suffix_decoding_cache_test.cpp  threadpool_test.cpp
tests/function_call/: CMakeLists.txt  deepseekv32_detector_test.cpp  deepseekv3_detector_test.cpp  glm45_detector_test.cpp  glm47_detector_test.cpp  kimik2_detector_test.cpp  qwen25_detector_test.cpp  qwen3_coder_detector_test.cpp
tests/function_call/partial_json_parser/: CMakeLists.txt
xllm/c_api/test/: CMakeLists.txt  README.md  utils.cpp  utils.h  xllm_test.cpp  xllm_test.flags  xllm_test.proto
xllm/core/common/: CMakeLists.txt  acl_graph_runtime.h  constants.h  device_monitor.cpp  device_monitor.h  etcd_client.cpp  etcd_client.h  etcd_utils.h  global_flags.cpp  global_flags.h  health_check_manager.h  help_formatter.h  instance_name.h  interruption_bus.h  linear_state_cache_options.cpp  linear_state_cache_options.h  macros.h  message.h  metrics.cpp  metrics.h  mspti_helper.cpp  mspti_helper.h  nvtx_helper.cpp  nvtx_helper.h  options.cpp  options.h  rate_limiter.cpp  rate_limiter.h  rec_model_utils.h  types.h  version_singleton.h  xllm_build_info.h.in
xllm/core/platform/: CMakeLists.txt  cuda_profiler.cpp  cuda_profiler.h  device.cpp  device.h  device_name_utils.cpp  device_name_utils.h  numa_utils.cpp  numa_utils.h  platform.cpp  platform.h  shared_vmm_allocator.cpp  shared_vmm_allocator.h  sleepable_allocator.cpp  sleepable_allocator.h  stream.cpp  stream.h  stream_event.h  torch_profiler.cpp  torch_profiler.h  vmm_api.cpp  vmm_api.h  vmm_torch_allocator.h
xllm/core/scheduler/: CMakeLists.txt  async_response_processor.cpp  async_response_processor.h  chunked_prefill_scheduler.cpp  chunked_prefill_scheduler.h  chunked_prefill_scheduler_test.cpp  continuous_scheduler.cpp  continuous_scheduler.h  continuous_scheduler_test.cpp  disagg_pd_chunked_prefill_scheduler.cpp  disagg_pd_chunked_prefill_scheduler.h  disagg_pd_scheduler.cpp  disagg_pd_scheduler.h  dit_scheduler.cpp  dit_scheduler.h  fixed_steps_scheduler.cpp  fixed_steps_scheduler.h  fixsteps_scheduler.cpp  fixsteps_scheduler.h  mix_scheduler.cpp  mix_scheduler.h  pd_ooc_scheduler.cpp  pd_ooc_scheduler.h  prefill_only_scheduler.cpp  prefill_only_scheduler.h  request_priority_queue.h  scheduler.h  scheduler_factory.cpp  scheduler_factory.h  zero_eviction_scheduler.cpp  zero_eviction_scheduler.h
xllm/function_call/: CMakeLists.txt  base_format_detector.cpp  base_format_detector.h  core_types.h  deepseekv32_detector.cpp  deepseekv32_detector.h  deepseekv3_detector.cpp  deepseekv3_detector.h  function_call.h  function_call_parser.cpp  function_call_parser.h  function_call_parser_test.cpp  glm45_detector.cpp  glm45_detector.h  glm47_detector.cpp  glm47_detector.h  json_array_detector.cpp  json_array_detector.h  kimik2_detector.cpp  kimik2_detector.h  qwen25_detector.cpp  qwen25_detector.h  qwen25_detector_test.cpp  qwen3_coder_detector.cpp  qwen3_coder_detector.h  required_tool_choice.cpp  required_tool_choice.h  tool_choice_constraint_utils.cpp  tool_choice_constraint_utils.h  utils.cpp  utils.h
xllm/function_call/partial_json_parser/: CMakeLists.txt
xllm/models/: CMakeLists.txt  model_registry.cpp  model_registry.h  models.h
xllm/models/dit/: autoencoder_kl.h  clip_text_model.h  pipeline_flux_base.h  pipeline_longcat_audiodit.h  pipeline_longcat_image.h  pipeline_longcat_image_edit.h  transformer_longcat_audiodit.h  umt5_encoder.h
xllm/models/llm/: deepseek_mtp.h  deepseek_v2.h  deepseek_v2_mtp.h  deepseek_v3.h  deepseek_v32.h  deepseek_v4.h  deepseek_v4_mtp.h  embedding_model_base.h  glm4_moe.h  glm4_moe_mtp.h  glm5.h  glm5_mtp.h  joyai_llm_flash.h  joyai_llm_flash_mtp.h  llama.h  llm_model_base.h  mimo.h  mimo_mtp.h  mtp_model_base.h  oxygen.h  qwen2.h  qwen3.h  qwen3_5.h  qwen3_5_mtp.h  qwen3_embedding.h  qwen3_hybrid_base.h  qwen3_moe.h  qwen3_next.h  qwen3_next_hybrid_base.h
xllm/models/rec/: onerec.h  rec_model_base.h
xllm/models/vlm/: minicpmv.h  oxygen_vlm.h  qwen2_5_vl.h  qwen2_vl.h  qwen3_5.h  qwen3_5_vl.h  qwen3_vl.h  qwen3_vl_base.h  qwen3_vl_moe.h
(+1791 files in other folders)
