include(cc_test)

cc_test(
  NAME
    batch_test
  SRCS
    batch_test.cpp
  DEPS
    :batch
    absl::time
    GTest::gtest_main
    $<$<BOOL:${USE_MLU}>:torch_mlu>
    $<$<BOOL:${USE_NPU}>:torch_npu>
)
target_link_libraries(batch_test
                      PUBLIC
                      Python::Python
                      $<$<BOOL:${USE_NPU}>:ascendcl>
                      $<$<BOOL:${USE_NPU}>:hccl>
                      $<$<BOOL:${USE_NPU}>:c_sec>
                      $<$<BOOL:${USE_NPU}>:nnopbase>)
